--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "react-to-print": "^3.1.1"
