--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
+    "@heroicons/react": "^2.2.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "firebase": "^12.0.0",
     "html2canvas": "^1.4.1",
+    "hugeicons-react": "^0.3.0",
     "jspdf": "^3.0.1",
     "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
